fix(Row Styles): change the Row's Layout on small mobile screens to render the grid successfully.

--- a/app/components/grid/styles.css
+++ b/app/components/grid/styles.css
@@ -9,14 +9,14 @@
 
 .grid_movie_gallery {
   display: grid;
-  row-gap: 2rem;
+  gap: 2rem;
   grid-template-columns: repeat(4, 1fr);
 }
 
 @media screen and (max-width: 768px) {
   .grid_movie_gallery {
     display: grid;
-    row-gap: 2rem;
+    gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -24,7 +24,7 @@
 @media screen and (max-width: 425px) {
   .grid_movie_gallery {
     display: grid;
-    row-gap: 2rem;
+    gap: 2rem;
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -32,7 +32,7 @@
 @media screen and (min-width: 1450px) {
   .grid_movie_gallery {
     display: grid;
-    row-gap: 2rem;
+    gap: 2rem;
     grid-template-columns: repeat(7, 1fr);
   }
 }
