--- a/app/components/row/styles.css
+++ b/app/components/row/styles.css
@@ -19,3 +19,14 @@
 .row_movie_container::-webkit-scrollbar {
   display: none;
 }
+
+@media screen and (max-width: 768px) {
+  .row_movie_container {
+    width: 100%;
+    overflow-x: scroll;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
